--- a/2019-08-06/index.html
+++ b/2019-08-06/index.html
@@ -9,25 +9,21 @@
     <title>Document</title>
 </head>
 
-<body>
-    <div class="a">
-        <form>
-            <div>
-                <label for="input_email">Email</label>
-                <input type="email" id="input-email" placeholder="hvan.17it2@sict.udn.vn">
-            </div>
-            <div>
-                <label for="nput-password">PassWord</label>
-                <input type="password" id="input-password">
-            </div>
-            <div>
-                <div class="dangky">
-                    <button>Dang ky</button>
+<body class="mau-nen">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12">
+                <div class="col-md-6">
+
+                </div>
+                <div class="col-md-6">
+
                 </div>
             </div>
+        </div>
 
-        </form>
     </div>
+
 </body>
 
 </html>
