--- a/2019-08-08/example.html
+++ b/2019-08-08/example.html
@@ -39,7 +39,7 @@
     </div>
     <div class="container">
         <div class="row">
-            <div class="col-12 d-flex justify-content-center align-items-center flex-column family">
+            <div class="col-8 offset-2 d-flex justify-content-center align-items-center flex-column family">
                 <h1 class="text-light">Cover your page</h1>
                 <p class="noidung">Cover is a one-page template for building simple and beautiful home page.Dowload, edit the text, and add your own fullscreen bacground photo to make it your own.</p>
                 <button type="button" class="btn btn-primary btn-light ">Large button</button>
